--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 <body>
     <button type="button" onclick="chamada()">Clique aqui</button>
     <script>
-        function chamada(){
-          fetch('https://jsonplaceholder.typicode.com/todos/1')
+        async function  chamada(){
+          await fetch('https://jsonplaceholder.typicode.com/posts')
             .then(response => response.json())
-            .then(dado => alert(`Título: ${dado.title}`))
-          alert('Depois do fetch')  
+            .then(dado => alert(`Título: ${dado[0].title}`))
+            .catch(erro => console.log(erro))
+            .finally(()=>alert('Email enviado'))
+         alert('Depois do fetch')  
         }
     </script>
 </body>
