--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    <button type="button" onclick="chamada()">Clique aqui</button>
+    <input type="text">
+    <button type="button" onclick="chamada2()">Clique aqui</button>
     <script>
+        let pessoa = {
+            nome : 'alessamdro',
+            fala : function(){
+                return 'Olá!'
+            }
+        }
         async function  chamada(){
           await fetch('https://jsonplaceholder.typicode.com/posts')
             .then(response => response.json())
@@ -16,6 +23,19 @@
             .finally(()=>alert('Email enviado'))
          alert('Depois do fetch')  
         }
+        function chamada2(){
+            let value = document.querySelector('input').value
+            pessoa.nome = value
+            try {
+                let req = fetch('https://jsonplaceholder.typicode.com/posts')
+                let json = req.then(response => response.json())
+                json.then(dados => console.log(dados[0].title))
+                console.log(pessoa.nome)
+            } catch (error) {
+                console.log(error)
+            }
+        }
+
     </script>
-</body>
+</body> 
 </html>     
